Fix the Carousel's buttons overlapping content

--- a/src/components/carousel/index.scss
+++ b/src/components/carousel/index.scss
@@ -21,6 +21,7 @@
 				min-height: 150px;
 				background-color: rgb(34, 38, 42, 0.7);
 				padding-bottom: 40px;
+				z-index: 2;
 				.card-text{
 					overflow: hidden;
 					width: 100%;
